# lazrecon

./: .env.example  .gitignore  LazRecon.bat  README.md  dir_brute.py  lazrecon.py  main.py  pyproject.toml  requirements.txt  run.py  setup.ps1  setup.sh
scripts/: backup_bypass_scanner.py  config_extractor.py  dir_brute.py  dir_brute0.py  dir_brute1.py  dir_brute2.py  dir_brute3.py  dir_brute4.py  gerar_icone.py  laz_brute_minimal..py  lazrecon.py  setup_poetry.ps1  setup_poetry.sh  super_crop.py
src/: core.py  gui.py  report.py  resources.py  translations.py  ui.py  utils.py  wordlist.py
