[project]
name = "web-path-brute-forcer"
version = "0.1.0"
description = "Script Python para reconhecimento web e mapeamento de caminhos (Path Discovery)."
authors = [
    {name = "lazsilvadev",email = "lazsilvadev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
