[tool.poetry]
name = "lazrecon"
version = "1.1.0"
description = "Ferramenta de reconhecimento web e fuzzing de diretórios com interface gráfica moderna."
authors = ["Laz Silva <lazsilvadev@gmail.com>"]
readme = "README.md"

packages = [{include = "lazrecon.py"}] 

# package-mode = false 

[tool.poetry.dependencies]
python = ">=3.13"
flet = "0.28.3"
requests = "^2.32.3"
fpdf = "^1.7.2"

[tool.poetry.scripts]

lazrecon = "lazrecon:main" 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
