[project]
name = "lazrecon"
version = "1.2.0"
description = "Professional Web Reconnaissance and Fuzzing Tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Laz Silva" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "flet==0.28.3",
    "flet-desktop==0.28.3",
    "fpdf2>=2.8.1",
    "httpx[http2]>=0.27.2",
    "pillow>=12.1.1",
    "pystray>=0.19.5",
]

[project.scripts]
lazrecon = "ui:main" 

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.19.0",
]

[tool.uv]
managed = true
package = true
